# CRE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ai_validation.yml  ci.yml
adr/: ADR-AGENT-001-agent-context.md  ADR-AGENT-002-usage-policy.md  ADR-AGENT-003-tool-contracts.md  ADR-AGENT-004-context-management.md  ADR-AGENT-005-cre-foundation-virtual-lab.md
ci/: coverage_rules.md
ddd/: AgentContext.md  Boundaries.md  ContextReframingEngine.md  InteractionModel.md  LaboratorioVirtual.md
examples/: cre_pipeline_example.md  lab_virtual_case.md  lv_case_template.md  lv_cycle_example_v1.md  lv_evidence_log_example.md  lv_evidence_template.md  lv_experiment_template.md  lv_hypothesis_template.md  sample_review.md  sample_task.md
include/cre/: App.hpp  GuiApp.hpp
mcp/: agent_interface.md  tool_contracts.md  tool_schema.json
mcp/contracts/: modify_code.contract.json
policies/: ai_usage_policy.md  approval_matrix.md  code_generation_rules.md  ethics_limits.md  review_policy.md  safety_constraints.md
prompts/: coding_prompt.md  lv_artifact_prompt.md  lv_cycle_prompt.md  system_prompt.md  task_template.md
scripts/: run_quality.sh  validate_governance_repo.py  validate_tool_contracts.py
scripts/dev/: install-git-hooks.sh
src/: App.cpp  GuiApp.cpp  main.cpp
tests/: SmokeTests.cpp
